fix z-index for tag_panel and admin menu dropdown

--- a/web/css/admin/admin-ui.styl
+++ b/web/css/admin/admin-ui.styl
@@ -419,6 +419,7 @@ td span.remove_entry
 					border-bottom 1px dotted white
 ul.dropdown-menu-settings
 	padding 0
+	z-index 1001 !important
 
 .ui-progressbar
 	margin-top 0.3em
